# csv_parser

./: Cargo.toml  README
sample_csv/: all_transactions.csv  cant_withdrawal.csv  invalid_deposit.csv  large_dataset_with_different_clients.csv  locked_account.csv  precision_check.csv  wrong_dispute.csv
src/: client.rs  lib.rs  main.rs  transaction.rs
