[package]
name = "csv_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[[bin]]
#name = "generate_large_testset"
#path = "./bin/generate_large_testset.rs"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
csv = "1.1"
snafu = "0.7"
#tokio = { version = "1", features = ["full"] }